src/test/deca/context/invalid/created/acces_field/acces_fields_sous_type.deca
// Description :
//   	acces champs sur sous_type
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 

class A {}

class B extends A {
int x;
}

{
A a = new A();
a.x;
}
